# abcd-fasttrack2bids

./: .gitignore  Dockerfile  README.md  bids_corrections.py  dataset_description.json  dcm2bids_v3_config.json  entrypoint.sh  fasttrack2bids.config  fasttrack2bids.py  fasttrack2s3.py  finalize.py  fix_downloadcmd.py  header.swarm  pipeline.py  pyproject.toml  run.py  swarm.sh  utilities.py
dependencies/: README.md
dependencies/bids/: dataset_description.json  task-MID_bold.json  task-SST_bold.json  task-nback_bold.json
deprecated/: run_pydra.py
docs/: prepare.md  prepare_nda_packages.md  troubleshooting.md
modality_agnostic/: task-rest_bold.json
