[tool.poetry]
name = "abcd-fasttrack2bids"
version = "0.0.0"
description = "A tool for converting ABCD Study data from the NDA's fast track collection to BIDS format."
authors = ["Eric Earl <eric.earl@nih.gov>", "Dustin Moraczewski <dustin.moraczewski@nih.gov>"]
license = "CC0-1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
dcm2bids = "^3.1.1"
dcm2niix = "^1.0.20220715"
nipype = "^1.8.6"
keyrings-alt = "^5.0.1"
pybids = "^0.16.5"
setuptools = "^70.0.0"
pydicom = "^2.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
